# plymouth

./: INSTALL  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
debian/: TODO  changelog  control  copyright  libplymouth-dev.install  libplymouth4.symbols  libplymouth5.symbols  plymouth-dev.install  plymouth-drm.install  plymouth-drm.lintian-overrides  plymouth-plugins-fade-in.install  plymouth-plugins-glow.install  plymouth-plugins-label.install  plymouth-plugins-pulser.install  plymouth-plugins-script.install  plymouth-plugins-solar.install  plymouth-plugins-spinfinity.install  plymouth-themes-fade-in.install  plymouth-themes-glow.install  plymouth-themes-script.install  plymouth-themes-spinner.install  plymouth-themes.install  plymouth-themes.postinst  plymouth-themes.postrm  plymouth-x11.install  plymouth.NEWS  plymouth.README.Debian  plymouth.TODO  plymouth.init  plymouth.install  plymouth.links  plymouth.lintian-overrides  plymouth.postinst  plymouth.postrm  plymouth.shlibs  rules  watch
debian/local/: debian-logo.png.uue  plymouth-set-default-plugin.sh  plymouth.hook  plymouth.init-premount  (+1 more)
docs/: Makefile.in
images/: Makefile.in
po/: LINGUAS  be.po  cs.po  de.po  es.po  fr.po  fur.po  hu.po  id.gmo  id.po  nl.po  pl.po  sr.po  tr.po  uk.po  zh_CN.po  zh_HK.po  zh_TW.po
scripts/: Makefile.am  Makefile.in  plymouth-generate-initrd  plymouth-populate-initrd.in  plymouth-set-default-plugin.in  plymouth-set-default-theme.in
src/: Makefile.am  Makefile.in  main.c  ply-boot-protocol.h  ply-boot-server.c  ply-boot-server.h  ply-boot-splash.c  ply-boot-splash.h  ply-splash-core.pc.in  plymouth-1.pc.in  plymouthd.defaults
src/client/: Makefile.am  Makefile.in  ply-boot-client.c  ply-boot-client.h  plymouth.c
src/client/tests/: Makefile.in
src/libply/: Makefile.am  Makefile.in  ply-array.c  ply-bitarray.c  ply-buffer.c  ply-command-parser.c  ply-command-parser.h  ply-event-loop.c  ply-event-loop.h  ply-frame-buffer.c  ply-frame-buffer.h  ply-hashtable.c  ply-hashtable.h  ply-key-file.c  ply-list.c  ply-logger.c  ply-logger.h  ply-progress.c  ply-progress.h  ply-region.c  ply-terminal-session.c  ply-terminal.c  ply-terminal.h  ply-trigger.c  ply-trigger.h  ply-utils.c  ply-utils.h
src/libply-splash-core/: Makefile.in  ply-boot-splash-plugin.h  ply-boot-splash.c  ply-boot-splash.h  ply-device-manager.c  ply-device-manager.h  ply-keyboard.c  ply-keyboard.h  ply-pixel-buffer.c  ply-pixel-buffer.h  ply-pixel-display.c  ply-pixel-display.h  ply-renderer-plugin.h  ply-renderer.c  ply-renderer.h  ply-seat.c  ply-seat.h  ply-terminal.c  ply-terminal.h  ply-text-progress-bar.c  ply-text-step-bar.c  ply-text-step-bar.h
src/libply-splash-graphics/: Makefile.in  ply-animation.c  ply-image.c  ply-image.h  ply-progress-animation.c  ply-throbber.c
src/libply/tests/: Makefile.am  Makefile.in  ply-array-test.am  ply-frame-buffer-test.am  ply-logger-test.am  ply-terminal-session-test.am  ply-terminal-test.am
src/libplybootsplash/: Makefile.am  Makefile.in  ply-animation.c  ply-animation.h  ply-boot-splash-plugin.h  ply-boot-splash.h  ply-entry.c  ply-entry.h  ply-image.c  ply-label-plugin.h  ply-label.c  ply-label.h  ply-progress-animation.c  ply-progress-animation.h  ply-progress-bar.c  ply-progress-bar.h  ply-text-progress-bar.c  ply-text-progress-bar.h  ply-text-pulser.c  ply-text-pulser.h  ply-throbber.c  ply-throbber.h  ply-window.c  ply-window.h
src/plugins/: Makefile.am  Makefile.in
src/plugins/controls/: Makefile.in
src/plugins/controls/label/: Makefile.am  Makefile.in  plugin.c
src/plugins/renderers/: Makefile.am  Makefile.in
src/plugins/renderers/drm/: Makefile.in  plugin.c  ply-renderer-generic-driver.c  ply-renderer-i915-driver.c  ply-renderer-nouveau-driver.c  ply-renderer-radeon-driver.c
src/plugins/renderers/frame-buffer/: Makefile.in  plugin.c
src/plugins/renderers/minui/: Makefile.am  Makefile.in  plugin.c
src/plugins/renderers/minui/core/: graphics.c  graphics_fbdev.c
src/plugins/renderers/x11/: Makefile.in  plugin.c
src/plugins/splash/: Makefile.am  Makefile.in
src/plugins/splash/details/: Makefile.am  Makefile.in  plugin.c
src/plugins/splash/fade-in/: Makefile.am  Makefile.in  plugin.c
src/plugins/splash/fade-throbber/: Makefile.am  Makefile.in  plugin.c
src/plugins/splash/pulser/: Makefile.am  Makefile.in  plugin.c
src/plugins/splash/script/: Makefile.am  Makefile.in  plugin.c  script-debug.c  script-execute.c  script-execute.h  script-lib-image.c  script-lib-image.h  script-lib-image.script  script-lib-math.c  script-lib-math.h  script-lib-math.script  script-lib-plymouth.c  script-lib-plymouth.h  script-lib-plymouth.script  script-lib-sprite.c  script-lib-sprite.h  script-lib-sprite.script  script-lib-string.c  script-object.c  script-object.h  script-parse.c  script-parse.h  script-scan.c  script-scan.h  script.c  script.h
src/plugins/splash/solar/: Makefile.am  Makefile.in  plugin.c
src/plugins/splash/space-flares/: Makefile.am  Makefile.in  plugin.c
src/plugins/splash/spinfinity/: Makefile.am  Makefile.in  plugin.c
src/plugins/splash/text/: Makefile.am  Makefile.in  plugin.c
src/plugins/splash/throbgress/: Makefile.am  Makefile.in  plugin.c
src/plugins/splash/tribar/: Makefile.in  plugin.c
src/plugins/splash/two-step/: Makefile.am  Makefile.in  plugin.c
src/tests/: Makefile.am  Makefile.in  ply-boot-splash-test.am  ply-window-test.am
src/upstart-bridge/: Makefile.in  ply-upstart-monitor.c  plymouth-upstart-bridge.c
src/viewer/: Makefile.am  Makefile.in  plymouth-log-viewer.c
systemd-units/: Makefile.am  Makefile.in  plymouth-halt.service  plymouth-halt.service.in  plymouth-kexec.service  plymouth-kexec.service.in  plymouth-poweroff.service  plymouth-poweroff.service.in  plymouth-quit-wait.service.in  plymouth-quit.service.in  plymouth-read-write.service.in  plymouth-reboot.service  plymouth-reboot.service.in  plymouth-start.service  plymouth-start.service.in  systemd-ask-password-plymouth.service  systemd-ask-password-plymouth.service.in
themes/: Makefile.am  Makefile.in
(+57 files in other folders)
